2024-01-18T08:18:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7567150547 # 34
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 589 1012 / 598 1024
* notice: next accum: outdated-unq outdated-all / unq all: 589 1012 / 599 1025
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-18]

2024-01-18T01:06:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7563867906 # 33
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 589 1012 / 597 1023
* notice: next accum: outdated-unq outdated-all / unq all: 589 1012 / 598 1024
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-17]

2024-01-13T16:17:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7513531162 # 20
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 589 1012 / 596 1022
* notice: next accum: outdated-unq outdated-all / unq all: 589 1012 / 597 1023
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-13]

2024-01-13T08:17:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7511292787 # 19