@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-18T08:18:21Z",
+  "timestamp" : "2024-01-19T01:07:24Z",
   "count_outdated" : 1012,
   "uniques_outdated" : 589,
-  "count" : 1025,
+  "count" : 1026,
   "uniques" : 599,
   "clones" : [
     {
@@ -79,9 +79,9 @@
     },
     {
       "timestamp": "2024-01-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
