@@ -1,5 +1,5 @@
 {
-  "count": 13,
+  "count": 14,
   "uniques": 3,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2024-01-18T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
