@@ -1,3 +1,12 @@
+2024-01-19T01:07:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7578035983 # 36
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 589 1012 / 599 1025
+* notice: next accum: outdated-unq outdated-all / unq all: 589 1012 / 599 1026
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-18]
+
 2024-01-18T08:18:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7567150547 # 34
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
